# Workshop-Computer-OSC-CV-Bridge

./: README.md  TouchOSC.md  VCV-Rack-2.md  WorkshopOSC.tosc  wc_osc_bridge.py  wc_osc_bridge.uf2
firmware/: CMakeLists.txt
firmware/include/: ComputerCardExtensions.h
firmware/src/: main.cpp
